...
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YhV-h7-4i9">
                                <rect key="frame" x="16" y="724" width="382" height="48"/>
                                <color key="backgroundColor" name="YP White"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="TjW-ss-RKd"/>
                                </constraints>
                                <color key="tintColor" name="YP Black"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Войти"/>
...
                                <rect key="frame" x="0.0" y="92" width="414" height="4"/>
                                <color key="progressTintColor" name="YP Black"/>
                            </progressView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="Z5U-Yn-M50"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="UnsplashWebView"/>
                        <constraints>
                            <constraint firstItem="1uX-Hq-ujL" firstAttribute="bottom" secondItem="79l-mo-LnN" secondAttribute="bottom" id="2gC-7d-YcJ"/>
                            <constraint firstItem="k2E-ts-vZF" firstAttribute="leading" secondItem="Z5U-Yn-M50" secondAttribute="leading" id="Fra-qE-d2U"/>
                            <constraint firstItem="Z5U-Yn-M50" firstAttribute="trailing" secondItem="k2E-ts-vZF" secondAttribute="trailing" id="IJb-cz-woY"/>
                            <constraint firstItem="1uX-Hq-ujL" firstAttribute="trailing" secondItem="79l-mo-LnN" secondAttribute="trailing" id="RT1-hk-u6E"/>
                            <constraint firstItem="1uX-Hq-ujL" firstAttribute="top" secondItem="Z5U-Yn-M50" secondAttribute="top" id="X6J-6j-i5F"/>
...
                                <connections>
                                    <outlet property="delegate" destination="mGT-Hc-yM3" id="XnF-CE-vsi"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PoS-pX-3Hr" userLabel="Back Button">
                                <rect key="frame" x="8" y="8" width="48" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="Backward"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="5ep-Vu-wgc"/>
                                    <constraint firstAttribute="width" constant="48" id="mU6-XI-wr7"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="nav_back_button_white"/>
...
