...
            }
        updateAvatar()
    }
    // logout
    func logout() {
        let alertController = UIAlertController(
            title: "Пока, пока!",
            message: "Уверены что хотите выйти?",
            preferredStyle: .alert
        )
        let yesAction = UIAlertAction(title: "Да", style: .default) { [weak self] _ in
            self?.logoutService.logout()
            
            if let window = UIApplication.shared.windows.first {
                window.rootViewController = SplashViewController()
            }
        }
...
